--- a/ClearMeasure/TestFizzBuzzer/TestFizzBuzzProject.csproj
+++ b/ClearMeasure/TestFizzBuzzer/TestFizzBuzzProject.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NUnitTest1.cs" />
+    <Compile Include="TestFizzBuzzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
