Rename and refactor a couple items to cleanup

--- a/ClearMeasure/ClearMeasure.csproj
+++ b/ClearMeasure/ClearMeasure.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FizzBuzz.cs" />
+    <Compile Include="NumberKeywordPair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
